ContenutoControllerTest UP (2 failure)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,4 @@
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.url=jdbc:postgresql://localhost/abbonamenti
 spring.datasource.username=postgres
-spring.datasource.password=
+spring.datasource.password=ste30916
