--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,10 @@
-#create-drop update  create  none verify
 spring.jpa.hibernate.ddl-auto=create-drop
-spring.datasource.url=jdbc:postgresql://localhost/abbonamenti
-spring.datasource.username=postgres
-spring.datasource.password=
+spring.datasource.initialization-mode=always
+
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.url=jdbc:h2:mem:db;DB_CLOSE_DELAY=-1
+spring.datasource.username=sa
+spring.datasource.password=sa
+
+application.jwtSecret= mauKodecSecretKey
+application.jwtExpirationMs= 864000000
